# remotehead

./: .gitignore  App.js  CMakeLists.txt  README.md  RELEASE.md  build_and_flash.sh  main.c  partitions.csv  sdkconfig  validate_tests.sh
.github/workflows/: build.yml  react-tests.yml  release.yml  test-firmware.yml  test-react.yml  test.yml
components/main_test/: CMakeLists.txt  test_http_handlers.c  test_main.c  test_nvs_utils.c  test_utils.c  test_utils.h
docs/: AUDIO_STREAMING.md  TESTING.md
main/: CMakeLists.txt  main.c  main.h
react-app/: .gitignore  README.md  package.json  tailwind.config.js
react-app/coverage/: clover.xml  coverage-final.json  lcov.info
react-app/coverage/lcov-report/: App.js.html  index.html  index.js.html
react-app/public/: index.html  manifest.json
react-app/src/: App.js  App.test.js  fallback-tailwind.css  index.css  index.js  output.css
spiffs/: index.html
src/: config_utils.c  config_utils.h  json_utils.c  json_utils.h
test/: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
test/main/: CMakeLists.txt  test_audio_streaming.c  test_audio_streaming.h  test_http_handlers.c  test_http_handlers.h  test_main.c  test_main_runner.c  test_nvs_utils.c  test_nvs_utils.h  test_utils.c  test_utils.h
tests/: Makefile  README.md  test_config_utils.c  test_json_utils.c  test_runner.c
tests/include/: simple_test.h
